--- a/Prediction.ipynb
+++ b/Prediction.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the comparison model we built in order as way to benchmark our LSTM model. The essence of this model is to predict the closing price for one day in advance (either up or down) based on historical data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -19,6 +26,13 @@
     "from sklearn import metrics\n",
     "from sklearn.model_selection import train_test_split\n",
     "pd.options.mode.chained_assignment = None "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We started by pulling stock data using the duandl library. Each dataframe initially contained the open/close/high/low price of the stock for each day from 1983-2018. Our goal was to predict whether the stock price would increase or decrease the following day based on previous data. We used five different models to see which ones would perform better on different data sets, with the three we went over in class as well as the Random Forest Classifier and the SVC, which we found to do better on the benchmark data."
    ]
   },
   {
@@ -48,6 +62,13 @@
     "        return -1\n",
     "    else:\n",
     "        return 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then calculated the change in price by shifting the dataframe and subtracting it from itself. We took the sign of this value which became the label for each day. We took a benchmark of the classifiers without adding in extra features and saw a pretty low accuracy of 48.1% for naive bayes, but up to 52% for SVC and Random Forest Classifier."
    ]
   },
   {
@@ -318,6 +339,13 @@
     "dfI.tail()\n",
     "dfN = quandl.get(\"WIKI/NVDA\")\n",
     "dfN.tail(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then looked at features we could add and decided on several that would provide information about global markets as well as historical data on AMD. The first feature was data on the NASDAQ index, which helps define performance of the entire US economy as a whole. We also incorporated google trends data, as a larger trend value could mean larger variance in stock price the following day. Finally, we incorporated company specific data, in calculating the moving-average of 5 and 10 days, essentially the average closing price over the period of time, because crossing the moving average or pulling away from it can define the start of a bull or bear trend. We then added features based on financial ratios found on the balance sheet such as beta, the volatility of the stock, as well as price/earnings ratio, a figure that compares the stock price to how much investers make from the stock on average."
    ]
   },
   {
@@ -1578,7 +1606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
